# NanoW

./: CMakeLists.txt  Makefile  README.md  sim  sim.cc
Crystal/: config.txt
Results/: plot2D_NW.C
src_G4/: G4Args.cc  G4Args.hh  G4sim.cc  G4sim.hh  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  run.hh
